connect with Kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ management.info.env.enabled=true
 info.name = Spring Data Rest
 info.description = Spring Boot Data REST application. This app is used for CRUD operations with employees of company
 info.telegram = @NeironEssensive
+
+server.port=8080
